--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crawl",
+  "name": "WebCrawlerInJS",
   "version": "1.0.0",
   "description": "search keyword on page",
   "main": "index.js",
